- #117 DE: Add holiday "Weltkindertag" in region 'TH' (Thüringen)
       (thanks to Slarky)
- Add support for Python 3.13, drop Python 3.8

2024.11.1
- #115 US: Implement federal holidays
       (thanks to J. David Stark)

2024.11.0
-      hu-HU: Add non-working days for 2025 in Hungary

2024.10.0
-      es-ES: Implement 2025 holidays of Spain

2024.8.3
- #112 Add locale en-AU
       (thanks to Alex Smith)

2024.8.2
- #113 Fix emitter output

2024.8.1
- #111 Refactor core classes, replace date parsing and custom date functions with DSL
- #110 Test holidays are only defined for valid regions
- #109 Enable holidata to be calculated outside confirmed range

2024.8.0
-      Add support for Python 3.12, replace 'snapshottest' with 'syrupy'
- #105 Holiday "Mariä Himmelfahrt" missing for region 'BY' in locale 'de-DE'
       (thanks to Alexei Samokvalov)
-      Convert DE into module

2024.6.0
- #102 Fix error in calculation of 'Day after Thanksgiving'
       (thanks to Peter J. Mello)
- #103 Fix region code for Bremen in locale 'DE'
       (thanks to Olaf Sebelin)

2023.11.1
-      Add non-working days for 2024 in country 'HU'
- #97  Merge locale and country
-      Fix permalinks for holidays in locale de-DE for region BE

2023.11.0
-      es-ES: Implement 2024 holidays of Spain
-      Drop support for Python 3.7
-      Use double quotes instead of single quotes and f-strings

2023.4.0
-      en-GB: Add bank holiday for the coronation of King Charles III
-      Move creator functions to holidata module
-      Print proper error messages for exceptions instead of stack traces
-      Fix regex for locale

2022.11.0
-      es-ES: Implement 2023 holidays of Spain

2022.9.0
-      en-GB: Add Bank Holiday for State Funeral of Queen Elizabeth II

2022.8.2
-      Add ability to specify a locale via country and language

2022.8.0
- #87  Update legal sources for Turkish holidays

2022.7.0
-      Restructured package
- #85  Error in locale en-GB, year 2022