@@ -1,4 +1,5 @@
 from holidata.holiday import Region
+from holidata.utils import day
 
 
 class TH(Region):
@@ -22,3 +23,9 @@ class TH(Region):
             .since(2018) \
             .on(month=10, day=31) \
             .with_flags("RF")
+
+        self.define_holiday() \
+            .with_name("Fronleichnam") \
+            .on(day(60).after(country.easter())) \
+            .with_flags("RV") \
+            .annotated_with("In Gemeinden mit überwiegend katholischer Bevölkerung")
