@@ -1,3 +1,4 @@
+-      DE: Add holiday "Fronleichnam" in region 'TH' for communities with catholic majority
 - #117 DE: Add holiday "Weltkindertag" in region 'TH' (Thüringen)
        (thanks to Slarky)
 - Add support for Python 3.13, drop Python 3.8
